[project]
name = "algorithm_time_script"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "distanceclosure",
    "jupyterlab>=4.5.5",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "psutil>=7.2.2",
    "python-dotenv>=1.2.2",
]

[tool.uv.sources]
distanceclosure = { git = "https://github.com/CASCI-lab/distanceclosure", branch = "heuristic_backbone" }
